<resources>
    <string name="app_name">LetsBuy</string>
    <string name="checkbox">Estou de acordo com os <font color="#F14866"> termos de serviço</font> e a <font color="#F14866">política de privacidade</font></string>
    <string name="titulo_esqueci_senha">Não consegue acessar sua conta?</string>
    <string name="texto_esqueci_senha">Insira o seu endereço de e-mail abaixo e enviaremos as instruções necessárias para redefinir a sua senha.</string>
    <string name="home">Home</string>
    <string name="curti">Favoritos</string>
    <string name="chat">Chat</string>
    <string name="perfil">Perfil</string>
    <string name="search_hint">O que você gostaria de encontrar hoje?</string>
    <string name="home_titulo_2">Mais relevantes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="compra_concluida">Compra concluida!</string>
    <string name="texto_compra_concluida">Aguarde a entrega do seu novo produto  e usufrua ao máximo!</string>
    <string name="minhas_compras">Minhas compras</string>
    <string name="falha_pagamento">Falha no pagamento!</string>
    <string name="texto_falha_pagamento">Ocorreu um erro ao tentar efetuar o pagamento.</string>
    <string name="retornar">Retornar</string>
    <string name="publicar">Publicar</string>
    <string name="atualizar">Atualizar</string>
    <string name="category">Categoria</string>

    <string-array name="colors_array">
        <item>Selecione uma cor</item>
        <item>Vermelho</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Amarelo</item>
        <item>Laranja</item>
        <item>Roxo</item>
        <item>Rosa</item>
        <item>Preto</item>
        <item>Branco</item>
        <item>Cinza</item>
        <item>Marrom</item>
        <item>Prata</item>
        <item>Dourado</item>
        <item>Azul marinho</item>
        <item>Verde azulado</item>
    </string-array>

    <string-array name="category_array">
        <item>Selecione uma categoria</item>
        <item>Veículos</item>
        <item>Eletrônicos</item>
        <item>Acessórios</item>
        <item>Casa e decoração</item>
        <item>Livros</item>
        <item>Filmes</item>
        <item>Hobbies</item>
        <item>Auto peças</item>
        <item>Esporte e lazer</item>
        <item>Pets</item>
        <item>Bebês e crianças</item>
    </string-array>

    <string-array name="quality_array">
        <item>Selecione a qualidade</item>
        <item>Novo</item>
        <item>Semi Novo</item>
        <item>Usado</item>
        <item>Defeituoso</item>
    </string-array>

    <string-array name="my_advertisements_type">
        <item>Publicados</item>
        <item>Vendidos</item>
        <item>Desativados</item>
    </string-array>
</resources>