<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.letsbuy.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_curti"
        android:name="com.example.letsbuy.ui.curti.CurtiFragment"
        android:label="@string/curti"
        tools:layout="@layout/fragment_curti"/>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.letsbuy.ui.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat"/>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.letsbuy.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil"/>

</navigation>